<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to AESOP WORKS!"
        android:layout_alignEnd="@+id/login_with_amazon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText"
        android:id="@+id/welcomeView"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:textColor="#f25e5e" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btnlwa_gold_loginwithamazon"
        android:id="@+id/login_with_amazon"
        android:enabled="true"
        android:background="@drawable/btnlwa_gold_loginwithamazon"
        android:layout_below="@+id/testCBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_model"
        android:id="@+id/devmdlView"
        android:layout_alignBottom="@+id/devmdlText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/devmdlText"
        android:singleLine="true"
        android:textStyle="bold|italic"
        android:textColor="@color/accent_material_light"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/devmdlText"
        android:inputType="text"
        android:minWidth="180dp"
        android:text="@string/iushumdl01_cough_cold"
        android:layout_above="@+id/dsnText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsn"
        android:id="@+id/dsnView"
        android:singleLine="true"
        android:textStyle="bold|italic"
        android:textColor="@color/accent_material_light"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_alignTop="@+id/dsnText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dsnText"
        android:inputType="text"
        android:minWidth="180dp"
        android:text="@string/testserialnosd14"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/devmdlText"
        android:layout_alignStart="@+id/devmdlText" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:id="@+id/testCBox"
        android:singleLine="false"
        android:checked="true"
        android:layout_below="@+id/dsnText"
        android:layout_toRightOf="@+id/dsnView"
        android:layout_toEndOf="@+id/dsnView" />
</RelativeLayout>
